--- a/index.html
+++ b/index.html
@@ -9,16 +9,86 @@
 </head>
 
 <body class="">
+
 	<div class="container">
 		<div class="row">
 			<div class="col order-5 order-md-1">
-				A
+
+				<button type="button" class="btn btn-outline-primary">Primary</button>
+				<button type="button" class="btn btn-outline-secondary">Secondary</button>
+				<button type="button" class="btn btn-outline-success">Success</button>
+				<button type="button" class="btn btn-outline-danger">Danger</button>
+				<button type="button" class="btn btn-outline-warning">Warning</button>
+				<button type="button" class="btn btn-outline-info">Info</button>
+				<button type="button" class="btn btn-outline-light">Light</button>
+				<button type="button" class="btn btn-outline-dark">Dark</button>
+
+				<button type="button" class="btn btn-primary btn-lg">Large button</button>
+				<button type="button" class="btn btn-secondary btn-lg">Large button</button>
+
+				<button type="button" class="btn btn-primary btn-sm">Small button</button>
+				<button type="button" class="btn btn-secondary btn-sm">Small button</button>
+
+				<button type="button" class="btn btn-lg btn-primary" disabled>Primary button</button>
+				<button type="button" class="btn btn-secondary btn-lg" disabled>Button</button>
+
+				<div class="d-grid gap-2">
+					<button class="btn btn-primary" type="button">Button</button>
+					<button class="btn btn-primary" type="button">Button</button>
+				</div>
+
+				<div class="d-grid gap-2 col-6 mx-auto">
+					<button class="btn btn-primary" type="button">Button</button>
+					<button class="btn btn-primary" type="button">Button</button>
+				</div>
+
+				<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+					<button class="btn btn-primary me-md-2" type="button">Button</button>
+					<button class="btn btn-primary" type="button">Button</button>
+				</div>
+
+				<button type="button" class="btn btn-primary" data-bs-toggle="button" autocomplete="off">Toggle button</button>
+				<button type="button" class="btn btn-primary active" data-bs-toggle="button" autocomplete="off"
+					aria-pressed="true">Active toggle button</button>
+				<button type="button" class="btn btn-primary" disabled data-bs-toggle="button" autocomplete="off">Disabled toggle
+					button</button>
+
 			</div>
-			<div class="col order-1 order-md-5">
-				B
-			</div>
-			<div class="col order-1 order-md-5">
-				C
+			<div>
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="basic-addon1">@</span>
+					<input type="text" class="form-control" placeholder="Username" aria-label="Username"
+						aria-describedby="basic-addon1">
+				</div>
+
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="Recipient's username"
+						aria-label="Recipient's username" aria-describedby="basic-addon2">
+					<span class="input-group-text" id="basic-addon2">@example.com</span>
+				</div>
+
+				<label for="basic-url" class="form-label">Your vanity URL</label>
+				<div class="input-group mb-3">
+					<span class="input-group-text" id="basic-addon3">https://example.com/users/</span>
+					<input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+				</div>
+
+				<div class="input-group mb-3">
+					<span class="input-group-text">$</span>
+					<input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+					<span class="input-group-text">.00</span>
+				</div>
+
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="Username" aria-label="Username">
+					<span class="input-group-text">@</span>
+					<input type="text" class="form-control" placeholder="Server" aria-label="Server">
+				</div>
+
+				<div class="input-group">
+					<span class="input-group-text">With textarea</span>
+					<textarea class="form-control" aria-label="With textarea"></textarea>
+				</div>
 			</div>
 		</div>
 	</div>
